<resources>
    <string name="app_name">Weather App</string>
    <string name="title_home">Home</string>
    <string name="title_saved">Saved</string>
    <string name="title_detail">Details</string>
    <string name="title_help">Help</string>
    <string name="title_setting">Settings</string>
    <!-- Preference Titles -->
    <string name="storage_header">Storage</string>
    <string name="convert_header">Converter</string>

    <!-- Messages Preferences -->
    <string name="clear_title">Clean Storage</string>
    <string name="reply_title">Default reply action</string>

    <!--Keys Preferences-->
    <string name="key_clear_storage">clear_storage</string>
    <string name="key_kelvin_to_celsius">kelvin_to_celsius</string>

    <!-- Sync Preferences -->
    <string name="kelvin_to_celsius_title">Kelvin to Celsius</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>