<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/storage_header">

        <Preference
            app:key="@string/key_clear_storage"
            app:title="@string/clear_title" />

        <!--<ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />-->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/convert_header">

        <SwitchPreferenceCompat
            app:key="@string/key_kelvin_to_celsius"
            app:title="@string/kelvin_to_celsius_title" />

        <!--<SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />-->

    </PreferenceCategory>

</PreferenceScreen>